--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -15,3 +15,18 @@ spring.h2.console.path=/h2-console
 
 # Logging
 logging.level.ru.otus.springaopdemo=DEBUG
+
+# shutdown spring.jpa.open-in-view
+spring.jpa.open-in-view=false
+
+# logging SQL
+spring.jpa.show-sql=true
+spring.jpa.properties.hibernate.format_sql=true
+
+# settings H2
+spring.h2.console.settings.trace=true
+spring.h2.console.settings.web-allow-others=true
+
+# logging for debugging AOP
+logging.level.org.springframework.aop=DEBUG
+logging.level.org.aspectj=DEBUG
